# backend/api/src/main/java/com/bankofz/mainframemodernization/inqstmt/domain/ErrorResponse.java
@@ -1,0 +1,8 @@
+package com.bankofz.mainframemodernization.inqstmt.domain;
+
+public record ErrorResponse(
+        String code,
+        String message,
+        String correlationId
+) {
+}
